--- a/exchnage/index.html
+++ b/exchnage/index.html
@@ -81,18 +81,24 @@
 <p>Exchange ActiveSync is an Exchange synchronization protocol based on HTTP and XML, lets mobile phones access an organization&rsquo;s information on a server that&rsquo;s running Microsoft Exchange. Exchange ActiveSync lets mobile phone users access their email, calendar, contacts, and tasks, and lets them continue to access this information when they&rsquo;re working offline.</p>
 <h5 id="important-command">Important Command</h5>
 <p>Use Exchange Management Shell to execute following commands.</p>
-<p>Get Exchange information</p>
+<p><strong>Get Exchange information</strong></p>
 <pre><code>Get-ExchangeServer | Format-List
-</code></pre><p>Get first 30 mail box which are occupying maximum storage</p>
+</code></pre><p><strong>Get first 30 mail box which are occupying maximum storage</strong></p>
 <pre><code>Get-Mailbox -ResultSize Unlimited | Get-MailboxStatistics | Sort-Object TotalItemSize -Descending | Select-Object DisplayName,TotalItemSize -First 30
-</code></pre><p>Get internal and external URL</p>
+</code></pre><p><strong>Get internal and external URL</strong></p>
 <pre><code>Get-ECPvirtualDirectory | Format-List Name, InternalURL, ExternalURL
-</code></pre><p>Get server componets states</p>
+</code></pre><p><strong>Get server componets states</strong></p>
 <pre><code>Get-ServerComponentState -Identity  MX-04
-</code></pre><p>Restart ImapProxy service / Set the ImapProxy state to active</p>
+</code></pre><p><strong>Restart ImapProxy service / Set the ImapProxy state to active</strong></p>
 <pre><code>Set-ServerComponentState -Identity MX-04 -Component ImapProxy -Requester HealthAPI -State Active
-</code></pre><p>Set the PopProxy state to active / Restart ImapProxy service</p>
+</code></pre><p><strong>Set the PopProxy state to active / Restart ImapProxy service</strong></p>
 <pre><code>Set-ServerComponentState -Identity MX-04 -Component PopProxy -Requester HealthAPI -State Active
+</code></pre><p><strong>Backup deleted email. By default deleted mailbox is stored for 14 days.</strong></p>
+<p>Use the Get-MailboxStatistics cmdlet to display the values of the DisplayName, MailboxGuid, and LegacyDN properties for the deleted mailbox that you want to restore.</p>
+<pre><code>$dbs = Get-MailboxDatabase
+$dbs | foreach {Get-MailboxStatistics -Database $_.DistinguishedName} | where {$_.DisconnectReason -eq &quot;Disabled&quot;} | Format-Table DisplayName,MailboxGuid,Database,DisconnectDate
+</code></pre><p>Now use following command and input SourceStoreMailbox and SourceDatabase from the result you just get.</p>
+<pre><code>New-MailboxRestoreRequest -SourceStoreMailbox af5c3f96-d3df-4271-88c4-4818d7ca0bef -SourceDatabase 0702033906 -TargetMailbox &quot;Firstname lastname&quot; -AllowLegacyDNMismatch
 </code></pre><hr>
 <p>Pratik Gautam
 <a href="mailto:pratikgautm@gmail.com">pratikgautm@gmail.com</a></p>
@@ -165,12 +171,10 @@
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/storage/lvm/">LVM</a></li>
 <li class=""><a href="https://tecnep.com/storage/raid/">RAID</a></li>
-<li class=""><a href="https://tecnep.com/storage/san_nas/">SAN and NAS</a></li>
-<li class=""><a href="https://tecnep.com/storage/storage_access/">Storage access methods</a></li>
 <li class=""><a href="https://tecnep.com/storage/drbd/">DRBD</a></li>
-<li class=""><a href="https://tecnep.com/storage/glusterfs/">Increase hard disk</a></li>
+<li class=""><a href="https://tecnep.com/storage/glusterfs/">Glusterfs</a></li>
 <li class=""><a href="https://tecnep.com/storage/object_storage/">Object storage</a></li>
-<li class=""><a href="https://tecnep.com/storage/increase_hd/">Increase hard disk</a></li>
+<li class=""><a href="https://tecnep.com/storage/ceph/">Ceph</a></li>
 </ul>
   
 </li>
@@ -194,10 +198,6 @@
 </li>
 
 <li class=""><a href="https://tecnep.com/ssl/">SSL</a>
-  
-</li>
-
-<li class=""><a href="https://tecnep.com/nas_san/">NAS and SAN</a>
   
 </li>
 
