--- a/firewall/rich_rule/index.html
+++ b/firewall/rich_rule/index.html
@@ -142,12 +142,10 @@ port protocol=&quot;tcp&quot; port=&quot;22&quot; accept'
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/storage/lvm/">LVM</a></li>
 <li class=""><a href="https://tecnep.com/storage/raid/">RAID</a></li>
-<li class=""><a href="https://tecnep.com/storage/san_nas/">SAN and NAS</a></li>
-<li class=""><a href="https://tecnep.com/storage/storage_access/">Storage access methods</a></li>
 <li class=""><a href="https://tecnep.com/storage/drbd/">DRBD</a></li>
-<li class=""><a href="https://tecnep.com/storage/glusterfs/">Increase hard disk</a></li>
+<li class=""><a href="https://tecnep.com/storage/glusterfs/">Glusterfs</a></li>
 <li class=""><a href="https://tecnep.com/storage/object_storage/">Object storage</a></li>
-<li class=""><a href="https://tecnep.com/storage/increase_hd/">Increase hard disk</a></li>
+<li class=""><a href="https://tecnep.com/storage/ceph/">Ceph</a></li>
 </ul>
   
 </li>
@@ -171,10 +169,6 @@ port protocol=&quot;tcp&quot; port=&quot;22&quot; accept'
 </li>
 
 <li class=""><a href="https://tecnep.com/ssl/">SSL</a>
-  
-</li>
-
-<li class=""><a href="https://tecnep.com/nas_san/">NAS and SAN</a>
   
 </li>
 
