--- a/chrony/index.html
+++ b/chrony/index.html
@@ -21,7 +21,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://linux.tecnep.com/chrony/" />
 <meta property="og:image" content="https://linux.tecnep.com/images/og-image.png"/>
-<meta property="og:site_name" content="tecnep.com" />
+<meta property="og:site_name" content="linux.tecnep.com" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://linux.tecnep.com/images/og-image.png"/>
 
