--- a/haproxy/configuration/index.html
+++ b/haproxy/configuration/index.html
@@ -23,7 +23,7 @@ a) Global section b) frontend section c) backend section d) Statistics a) Global
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://linux.tecnep.com/haproxy/configuration/" />
 <meta property="og:image" content="https://linux.tecnep.com/images/og-image.png"/>
-<meta property="og:site_name" content="tecnep.com" />
+<meta property="og:site_name" content="linux.tecnep.com" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://linux.tecnep.com/images/og-image.png"/>
 
