--- a/command/index.html
+++ b/command/index.html
@@ -22,7 +22,7 @@ yum package manager yum provides yum history yum install {package_name} yum remo
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://linux.tecnep.com/command/" />
 <meta property="og:image" content="https://linux.tecnep.com/images/og-image.png"/>
-<meta property="og:site_name" content="tecnep.com" />
+<meta property="og:site_name" content="linux.tecnep.com" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://linux.tecnep.com/images/og-image.png"/>
 
