--- a/dns/dkim/index.html
+++ b/dns/dkim/index.html
@@ -23,7 +23,7 @@ A hash is created from the content of the message headers and signed it with pri
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://linux.tecnep.com/dns/dkim/" />
 <meta property="og:image" content="https://linux.tecnep.com/images/og-image.png"/>
-<meta property="og:site_name" content="tecnep.com" />
+<meta property="og:site_name" content="linux.tecnep.com" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://linux.tecnep.com/images/og-image.png"/>
 
