--- a/haproxy/installation/index.html
+++ b/haproxy/installation/index.html
@@ -23,7 +23,7 @@ yum install -y make gcc gcc-c&#43;&#43; pcre-devel openssl-devel readline-devel 
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://linux.tecnep.com/haproxy/installation/" />
 <meta property="og:image" content="https://linux.tecnep.com/images/og-image.png"/>
-<meta property="og:site_name" content="tecnep.com" />
+<meta property="og:site_name" content="linux.tecnep.com" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://linux.tecnep.com/images/og-image.png"/>
 
