--- a/storage/drbd/index.html
+++ b/storage/drbd/index.html
@@ -23,7 +23,7 @@ drbd1: IP : 192.168.91.50 cluster disk : /dev/sdb ; 10 GB drbd2 : IP : 192." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://linux.tecnep.com/storage/drbd/" />
 <meta property="og:image" content="https://linux.tecnep.com/images/og-image.png"/>
-<meta property="og:site_name" content="tecnep.com" />
+<meta property="og:site_name" content="linux.tecnep.com" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://linux.tecnep.com/images/og-image.png"/>
 
