--- a/storage/minio/index.html
+++ b/storage/minio/index.html
@@ -22,7 +22,7 @@ Objects are discrete units of data that are stored in a structurally flat data e
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://linux.tecnep.com/storage/minio/" />
 <meta property="og:image" content="https://linux.tecnep.com/images/og-image.png"/>
-<meta property="og:site_name" content="tecnep.com" />
+<meta property="og:site_name" content="linux.tecnep.com" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://linux.tecnep.com/images/og-image.png"/>
 
