--- a/storage/raid/index.html
+++ b/storage/raid/index.html
@@ -22,7 +22,7 @@ RAID Levels Raid-0 &ndash; Striping  Data is striped across multiple disk." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://linux.tecnep.com/storage/raid/" />
 <meta property="og:image" content="https://linux.tecnep.com/images/og-image.png"/>
-<meta property="og:site_name" content="tecnep.com" />
+<meta property="og:site_name" content="linux.tecnep.com" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://linux.tecnep.com/images/og-image.png"/>
 
